@@ -116,6 +116,9 @@ public:
 	float3 mainDir;								//main aim dir of weapon
 	float maxMainDirAngleDif;					//how far away from main aim dir the weapon can aim at something (as an acos value)
 
+	bool avoidFriendly;		//if true tried to avoid firendly units when fireing
+	unsigned int collisionFlags;
+
 	float fuelUsage;
 };
 
